<resources>
    <string name="app_name">ZOE TECH</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="loginbtn">Login</string>
    <string name="not_yet_registered_sign_up">Not yet registered? Sign Up</string>
    <string name="logo_of_the_zoe_tech">logo of the zoe tech</string>
    <string name="oil">Oil</string>
    <string name="dashboard">Dashboard</string>
    <string name="today_oil_price">Today Oil Price</string>
    <string name="price">Price</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="function2">Function 2</string>
    <string name="function_3">Function 3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="function1">Function1</string>
    <string name="number_of_cans">#of Cans</string>
    <string name="money">Money</string>
    <string name="em_oil">Em Oil</string>
    <string name="pictureofmoney">pictureOfMoney</string>
    <string name="_18kg_oil_cans">18Kg oil Cans</string>
</resources>